- RiskCharacteristicType (Added)
- SUVACompanyType (Added)
- UVGOCoverageType
    - replaced enum values
- UVGOFixedPayrollsType (Changed)
    - Renamed to UVGOPersonType
    - Added optional property "degreeOfEmployment"
    - Added mandatory property "insuranceType"
    - Removed property "coverage"
    - renamed property "premiumInsuredPerson" to "premiumPersonMentionedByName"
- UVGOInsuranceOptionsVariousType (Changed)
    - Added "additionalOptions" property
    - property "annualCancellation" is now optional
- UVGOInsurerType (Removed)
- UVGOPersonGroupType (Changed)
    - Added property "personGroupDescription"
    - renamed property "numberOfPersonsBU" to "numberOfPersonsOA"
    - renamed property "numberOfPersonsNBU" to "numberOfPersonsNOA"
    - renamed property "payrollBU" to "payrollEmployeesOA"
    - renamed property "payrollNBU" to "payrollEmployeesNOA"
- UVGZCoverageType (Changed)
    - property "deathCapital" is now optional
    - property "disabilityCapital" is now optional
    - property "dailyAllowance" is now optional
    - property "dailyHospitalAllowance" is now optional
    - property "differentialCover" is now optional
    - added optional property "subsequentPaymentsAfterDeath"
    - added optional property integrityCapital (moved from DisabilityCapitalType)
    - removed property medicalExpenses
    - added property "medicalExpensesHospitalType"
    - replaced properties in "disabilityPension"
    - replaced properties in "survivorsPension"
    - added property "survivorsPartnerPension"
- UVGZInsuranceOptionsType (Added)
- UVGZFixedPayrollsType (Changed)
    - renamed to "UVGZPersonType"
    - removed property "surplusPayroll"
    - added property "degreeOfEmployment"
    - added mandatory property "insuranceType"
- UVGZPersonGroupsType (Changed)
    - Added property "personGroupDescription"
    - Removed property "payrollTotal"
    - Renamed property "maximumPayrollAmount" to "maxSalary"
    - Removed property "surplusSalaryTotal"